--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,8 @@ PyJWT==1.4.2
 pymongo==4.1.1
 pyparsing==3.0.9
 pytest==7.1.2
+pytest-flask==1.2.0
+pytest-mongodb==2.2.0
 python-dotenv==0.20.0
 PyYAML==6.0
 requests==2.28.0
