--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ PyJWT==1.4.2
 pymongo==4.1.1
 pyparsing==3.0.9
 pytest==7.1.2
+pytest-dbfixtures==1.0.0
 pytest-flask==1.2.0
 pytest-mongodb==2.2.0
 python-dotenv==0.20.0
