--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ asgiref==3.5.2
 asyncio==3.4.3
 atomicwrites==1.4.0
 attrs==21.4.0
+bcrypt==3.2.2
 certifi==2022.6.15
+cffi==1.15.1
 charset-normalizer==2.0.12
 click==8.1.3
 colorama==0.4.5
@@ -12,6 +14,7 @@ email-validator==1.2.1
 extras==1.0.0
 fixtures==4.0.0
 Flask==2.1.2
+Flask-Bcrypt==1.0.1
 Flask-JWT==0.3.2
 Flask-JWT-Extended==3.18.0
 Flask-Login==0.6.1
@@ -30,6 +33,7 @@ packaging==21.3
 pbr==5.9.0
 pluggy==1.0.0
 py==1.11.0
+pycparser==2.21
 PyJWT==1.4.2
 pymongo==4.1.1
 pyparsing==3.0.9
@@ -47,6 +51,6 @@ tomli==2.0.1
 tqdm==4.64.0
 urllib3==1.26.9
 uuid==1.30
-Werkzeug==2.1.2
+Werkzeug==2.0.0
 WTForms==3.0.1
 zipp==3.8.0
