--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ asyncio==3.4.3
 atomicwrites==1.4.0
 attrs==21.4.0
 bcrypt==3.2.2
+bidict==0.22.0
 certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==2.0.12
@@ -12,7 +13,7 @@ coverage==6.4.1
 dnspython==2.2.1
 email-validator==1.2.1
 extras==1.0.0
-fixtures==4.0.0
+fixtures==4.0.1
 Flask==2.1.2
 Flask-Bcrypt==1.0.1
 Flask-JWT==0.3.2
@@ -20,6 +21,7 @@ Flask-JWT-Extended==3.18.0
 Flask-Login==0.6.1
 flask-mongoengine==1.0.0
 flask-pytest==0.0.5
+Flask-SocketIO==5.2.0
 Flask-WTF==1.0.1
 idna==3.3
 importlib-metadata==4.11.4
@@ -42,6 +44,8 @@ pytest-dbfixtures==1.0.0
 pytest-flask==1.2.0
 pytest-mongodb==2.2.0
 python-dotenv==0.20.0
+python-engineio==4.3.3
+python-socketio==5.7.0
 PyYAML==6.0
 requests==2.28.0
 sentinels==1.0.0
@@ -51,6 +55,6 @@ tomli==2.0.1
 tqdm==4.64.0
 urllib3==1.26.9
 uuid==1.30
-Werkzeug==2.0.0
+Werkzeug==2.1.2
 WTForms==3.0.1
 zipp==3.8.0
