--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ extras==1.0.0
 fixtures==4.0.1
 Flask==2.1.2
 Flask-Bcrypt==1.0.1
+Flask-Cors==3.0.10
 Flask-JWT==0.3.2
 Flask-JWT-Extended==3.18.0
 Flask-Login==0.6.1
@@ -55,6 +56,6 @@ tomli==2.0.1
 tqdm==4.64.0
 urllib3==1.26.9
 uuid==1.30
-Werkzeug==2.1.2
+Werkzeug==2.0.0
 WTForms==3.0.1
 zipp==3.8.0
